add image and refactor the code

--- a/index.html
+++ b/index.html
@@ -15,59 +15,83 @@
           alt="pinterst logo "
         />
         <p>Pinterst</p>
-      </div>
         <ul>
           <li>Watch</li>
-          <li>Watch</li>
+          <li>Explore</li>
         </ul>
-   
+      </div>
+
       <div class="nav-button">
         <ul>
-            <li>Watch</li>
-            <li>Watch</li>
-            <li>Watch</li>
-         
-          </ul>
-          <div class="btn-flex">
-        <div>   <button>sighn in</button></div>
-      <div>  <button>log in</button> </div>
-    </div>
+          <li>About</li>
+          <li>Business</li>
+          <li>Blog</li>
+        </ul>
+        <div class="btn-flex">
+          <div>
+            <button
+              class="hover-btn"
+              style="background-color: red; color: #fff"
+            >
+              Log in
+            </button>
+          </div>
+          <div>
+            <button class="hover-btn" style="background-color: gray">
+              Sign in
+            </button>
+          </div>
+        </div>
       </div>
     </nav>
-    <main>
-        <h1>Get your next
-            weeknight dinner idea</h1>
-    </main>
-    <div class="photo-section">
-        <div class="try">
-<div class="photo-one">
- <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-</div>
-<div class="photo-two">
-    <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-</div>
-<div class="photo-three">
-    <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-</div>
-<div class="photo-one-i">
-    <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-   </div>
-</div>
-<div class="photo-four">
-    <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-    </div>
-    <div class="try">
-    <div class="photo-three">
-         
-        <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-    </div>
-    <div class="photo-two">
-        <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
-    </div>
-    <div class="photo-one">
-        <img src="https://i.pinimg.com/236x/d3/fb/69/d3fb6973cddc1d875dc7c2e04525d2e7.jpg">
+    <div class="container">
+      <div>
+        <h1>Get your next</h1>
+        <h1><span> weeknight dinner idea</span></h1>
+      </div>
+      <div class="douts">
+        <p><span>.</span></p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+      </div>
+      <div class="photo-section">
+        <div class="photo-one">
+          <div><img src="./images/breakfast.jpeg" /></div>
+          <img src="./images/fruit.jpeg" />
         </div>
-    </div>
+        <div class="photo-one two">
+          <div>
+            <img src="./images/egg.jpeg" />
+          </div>
+          <img src="./images/cake.jpeg" />
+        </div>
+        <div class="photo-one three">
+          <div><img src="images/food.jpeg" /></div>
+          <img src="./images/orange.jpeg" />
+        </div>
+        <div class="photo-one four">
+          <div><img src="./images/pasta2.webp" /></div>
+          <img src="./images/pasta.jpeg" />
+        </div>
+        <div class="photo-one three">
+          <div><img src="./images/juce.jpeg" /></div>
+          <img src="./images/lemon.jpeg" />
+        </div>
+        <div class="photo-one two">
+          <div><img src="./images/rise.jpeg" /></div>
+          <img src="./images/takes.jpeg" />
+        </div>
+        <div class="photo-one">
+          <div><img src="./images/green.jpeg" /></div>
+          <img src="./images/green2.webp" />
+        </div>
+      </div>
+
+      <button class="last-section">▽</button>
+      <div class="last-section-text">
+        <p>Here's how it works ..▽</p>
+      </div>
     </div>
   </body>
 </html>
